Corrections souci connection et icone météo

--- a/html/clockTile.html
+++ b/html/clockTile.html
@@ -32,7 +32,7 @@
         </svg>
         <div class="clock-digital"><span class="clock-digital-hour">10</span>:<span class="clock-digital-minute">15</span>:<span class="clock-digital-second">20</span></div>
         <div class="clock-ampm"></div>
-        <div class="clock-weather"><img src="{{meteoIcon}}" alt="Météo" title="Météo"/></div>
+        <div class="clock-weather">{{meteoIcon}}</div>
         <div class="clock-temp">{{temperature}}</div>
     </div>
 </div>
