début du routing

--- a/html/content.html
+++ b/html/content.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <form id="form-gestion" method="post" action="{{{{target}}}}">
+                            <form id="form-gestion" method="post" action="{{target}}">
                                 <img src="images/ajax-loader.gif" alt="loader" class=" hidden center-block" id="ajax-loader"/>
                                 <div id="results">
                                     {{clockSearchItems}}
@@ -83,7 +83,7 @@
                     <h3 class="modal-title">Créer une horloge</h3>
                 </div>
                 <div class="modal-body">
-                    <form id="form-create-clock" method="post" action="{{{{target}}}}">
+                    <form id="form-create-clock" method="post" action="{{target}}">
                         <img src="images/ajax-loader.gif" alt="loader" class="hidden center-block" id="ajax-loader"/>
                         <div class="form-group">
                             <label>Veuillez saisir une ville</label>
