correction de l'ordre des horloges modification de la recherche début de refactoring de la création d'horloge

--- a/html/clockItem.html
+++ b/html/clockItem.html
@@ -1,6 +1,8 @@
-<div class="col-xs-10">
-    <label for="{{clockIdHtml}}"><h4>{{countryName}}, {{townName}}, {{timezoneOffset}}</h4></label>
-</div>
-<div class="col-xs-2">
-    <input type="checkbox" style="transform: scale(1.2); -webkit-transform: scale(1.2);" id="{{clockIdHtml}}" name="{{clockId}}" {{checked}}>
+<div>
+    <div class="col-xs-10">
+        <label for="{{clockIdHtml}}"><h4>{{countryName}}, {{townName}}, {{timezoneOffset}}</h4></label>
+    </div>
+    <div class="col-xs-2">
+        <input type="checkbox" style="transform: scale(1.2); -webkit-transform: scale(1.2);" id="{{clockIdHtml}}" name="{{clockId}}" {{checked}}>
+    </div>
 </div>
