--- a/html/content.html
+++ b/html/content.html
@@ -53,7 +53,7 @@
                         <div class="col-xs-10 col-xs-offset-1">
                             <form class="searchAjax" action="search.php" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="search" id="search" placeholder="Rechercher un pays ou une ville"/>
+                                    <input type="text" class="form-control" name="search" id="search" placeholder="Rechercher un pays ou une ville" autocomplete="off"/>
                                 </div>
                                 <br/>
                             </form>
