--- a/html/clockTile.html
+++ b/html/clockTile.html
@@ -30,7 +30,7 @@
                 </g>
             </g>
         </svg>
-        <div class="clock-digital"><span class="clock-digital-hour">10</span>:<span class="clock-digital-minute">15</span>:<span class="clock-digital-second">20</span></div>
+        <div class="clock-digital"></div>
         <div class="clock-ampm"></div>
         <div class="clock-weather">{{meteoIcon}}</div>
         <div class="clock-temp">{{temperature}}</div>
