--- a/html/content.html
+++ b/html/content.html
@@ -16,6 +16,7 @@
                     <h4 class="modal-title">
                         <span class="detail-date"></span>
                         <span class="detail-timezone-offset"></span>
+                        <span class="detail-timezone hidden"></span>
                     </h4>
                 </div>
                 <div class="modal-body" id="modal-details-content">
@@ -62,7 +63,6 @@
                     <div class="row">
                         <div class="col-md-12">
                             <form id="form-gestion" method="post" action="{{target}}">
-                                <img src="images/ajax-loader.gif" alt="loader" class=" hidden center-block" id="ajax-loader"/>
                                 <div id="results">
                                     {{clockSearchItems}}
                                 </div>
@@ -95,7 +95,6 @@
                 </div>
                 <div class="modal-body">
                     <form id="form-create-clock" method="post" action="{{target}}">
-                        <img src="images/ajax-loader.gif" alt="loader" class="hidden center-block" id="ajax-loader"/>
                         <div class="form-group">
                             <label>Veuillez saisir une ville</label>
                             <input type="text" class="form-control" name="city" placeholder="Veuillez saisir une ville" required/>
