ajout du dossier framework
ajout des controllers

petites corrections en tout genre

--- a/html/head.html
+++ b/html/head.html
@@ -1,7 +1,7 @@
 <head lang="fr">
     <meta charset="UTF-8">
     <title>Timezone</title>
-    <link rel="stylesheet" href="css/jquery-ui.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/accueil.css">
+    <link rel="stylesheet" href="public/css/jquery-ui.min.css">
+    <link rel="stylesheet" href="public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/css/accueil.css">
 </head>
