--- a/html/footer.html
+++ b/html/footer.html
@@ -1,10 +1,10 @@
 <div>
-    <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/moment.js"></script>
-    <script type="text/javascript" src="js/moment-timezone-data.js"></script>
-    <script type="text/javascript" src="js/moment-timezone.js"></script>
-    <script type="text/javascript" src="js/accueil.js"></script>
+    <script type="text/javascript" src="public/js/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="public/js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="public/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="public/js/moment.js"></script>
+    <script type="text/javascript" src="public/js/moment-timezone-data.js"></script>
+    <script type="text/javascript" src="public/js/moment-timezone.js"></script>
+    <script type="text/javascript" src="public/js/accueil.js"></script>
     {{script}}
 </div>
